force-app/main/default/objects/AccountBrand/AccountBrand.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>