force-app/main/default/objects/AccountBrand/fields/partdir_mp__About__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__About__c</fullName>
    <label>About</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>