force-app/main/default/objects/AccountBrand/fields/partdir_mp__Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Approver_Email__c</fullName>
    <formula>Account.partdir_mp__Approver__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Email</label>
    <type>Text</type>
</CustomField>