force-app/main/default/objects/AccountBrand/fields/partdir_mp__Featured_partner__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Featured_partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Featured partner</label>
    <type>Checkbox</type>
</CustomField>