force-app/main/default/objects/AccountBrand/fields/partdir_mp__Is_Partner_Active__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Is_Partner_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Marketplace Listing Active</label>
    <type>Checkbox</type>
</CustomField>