force-app/main/default/objects/AccountBrand/fields/partdir_mp__Level__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diaper Bank</fullName>
            </value>
            <value>
                <fullName>Period Supply Bank</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <isActive>false</isActive>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <isActive>false</isActive>
                <label>Silver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>