force-app/main/default/objects/AccountBrand/fields/partdir_mp__Location__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Location__c</fullName>
    <label>Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>