force-app/main/default/objects/AccountBrand/fields/partdir_mp__Order__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>