force-app/main/default/objects/AccountBrand/fields/partdir_mp__Published__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>