force-app/main/default/objects/AccountBrand/fields/partdir_mp__Rating_Average__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Rating_Average__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Rating Average</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>