force-app/main/default/objects/AccountBrand/fields/partdir_mp__Reviews_Count__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__Reviews_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reviews Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>