force-app/main/default/objects/AccountBrand/fields/partdir_mp__SocialNetworkLinkedIn__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__SocialNetworkLinkedIn__c</fullName>
    <label>Social Network LinkedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>