force-app/main/default/objects/AccountBrand/fields/partdir_mp__SocialNetworkTwitter__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__SocialNetworkTwitter__c</fullName>
    <label>Social Network Twitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>