force-app/main/default/objects/AccountBrand/fields/partdir_mp__SocialNetworkYoutube__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__SocialNetworkYoutube__c</fullName>
    <label>Social Network Youtube</label>
    <length>255</length>
    <type>Text</type>
</CustomField>