force-app/main/default/objects/AccountBrand/fields/partdir_mp__System_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__System_Address_Field__c</fullName>
    <formula>Street &amp;
IF(
    NOT(ISBLANK(City)),
    &quot; &quot; &amp; City,
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(State)),
    &quot; &quot; &amp; State,
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(PostalCode)),
    &quot; &quot; &amp; PostalCode,
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(Country)),
    &quot; &quot; &amp; Country,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Address Field</label>
    <type>Text</type>
</CustomField>