force-app/main/default/objects/AccountBrand/listViews/All_Account_Brands.listView-meta.xml
<ListView>
    <fullName>All_Account_Brands</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>partdir_mp__Level__c</columns>
    <columns>Website</columns>
    <columns>Email</columns>
    <columns>partdir_mp__Published__c</columns>
    <columns>partdir_mp__Is_Partner_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account</field>
        <operation>notContain</operation>
        <value>A11,Addams</value>
    </filters>
    <label>All Account Brands</label>
</ListView>